k8s/eks/ingress/ingress-eks.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  namespace: zuidui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: a9818d7ad55d04c29b497ce52418be8d-688892677.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8081
